# N_Body

./: .gitignore  Analysis.cpp  Analysis.h  CMakeLists.txt  ClusteringParams.txt  InOut.cpp  InOut.h  InitialConditions.cpp  InitialConditions.h  Integrator.cpp  Integrator.h  N_Body.sln  N_Body.vcxproj  N_Body.vcxproj.filters  Node.cpp  Node.h  Parameters.cpp  Parameters.h  README.rst  Star.cpp  Star.h  Structs.h  Vec3D.cpp  Vec3D.h  conf.py  main.cpp  mask_lin_reg.xlsx  simulation.cfg  simulation_20210512.cfg  simulation_NGC2244.cfg  simulation_NGC6611.cfg  simulation_backup.cfg  simulation_finalBoss.cfg  simulation_test.cfg  sqlite3.lib  test.db
CFGs/: 0.cfg  0_1000.cfg  0_10000.cfg  0_1000_0.01.cfg  0_1000_0.015.cfg  0_1600.cfg  0_25000.cfg  0_4000.cfg  0_640.cfg  10_10000.cfg  10_1600.cfg  10_25000.cfg  10_4000.cfg  10_640.cfg  15.cfg  180.cfg  180_10000.cfg  180_1600.cfg  180_25000.cfg  180_4000.cfg  180_640.cfg  25_10000.cfg  25_1600.cfg  25_25000.cfg  25_4000.cfg  25_640.cfg  30.cfg  5.cfg  5_10000.cfg  5_1600.cfg  5_25000.cfg  5_4000.cfg  5_640.cfg  60.cfg  90.cfg  simulation_NGC2244.cfg  simulation_NGC6611.cfg  simulation_backup.cfg  simulation_finalBoss.cfg  simulation_test.cfg
Data/: 1000.info  1000.txt  10000.txt  1600.txt  4000.txt  640.txt  NGC2244.txt  NGC6611.txt  test.db  test.db-journal
Data/Omega_Cen_proper_motions/: ReadMe  notes.rst
Data/Young_Cluster_Properties/: make_plot.py
Defensio/Data/: 25_observations.xlsx
Defensio/latex_project/: main.aux  main.nav  main.out  main.tex  main.toc  short.tex  shorter.tex
Misc/: fileFromDB.py  plot_of_mass_function.py
Misc/TestScripts/: ScopeSim.py  skycalc_temp.fits  transformations.py
Misc/TestScripts/ELT/: ELT.yaml
Misc/TestScripts/MICADO/: MICADO_H4RG.yaml
Output/: 25_observations.xlsx  plot_skripts.py
Output/Simulation1/: Notes.txt
Python/: ScopeSim.py  photutilsTest.py  util.py
Python/Photometry/: Photometry.sln
Python/Photometry/Photometry/: ErrorAnalysis.py  Photometry.pyproj  Photutils.py  ScopeSim.py  config.py  database.py  main.py  plot.py  point.py  util.py
Python/ScopeSim/: ScopeSim.sln
Python/ScopeSim/ScopeSim/: ScopeSim.py
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  apparent_magnitude.docx  bibtex.bib  conf.py  index.rst  requirements.txt
docs/N-Body Simulation/: Initialization.rst
docs/N-Body-Simulation/: Abstract.rst  Appendix.rst  Clustering.rst  Code.rst  Conclusions.rst  CoordinateSystems.rst  DataReduction.rst  Database.dia  Database.rst  Experiments.rst  Initialization.rst  Integration.rst  Introduction.rst  Mock Observations.rst  Mock observations.rst  Potential.rst  bibtex.bib  f1_mapped.csv  mask_lin_reg.csv  n_stars_mapped.csv  precision_mapped.csv
docs/N-Body-Simulation/Images/: Database.dia  svg.bat
docs/N-Body-Simulation/Images/cone/: cone.ps
docs/N-Body-Simulation/pyplots/: frequencyDistribution.py
docs/NBodySimulation/: Abstract.rst  Acknowledgement.rst  Appendix.rst  Clustering.rst  Code.rst  Conclusions.rst  CoordinateSystems.rst  DataReduction.rst  Database.rst  Experiments.rst  Initialization.rst  Integration.rst  Introduction.rst  MockObservations.rst  Potential.rst  avg_velocity_mapped.csv  bibtex.bib  mask_lin_reg.csv  n_stars_simulated.csv  precision_simulated.csv  vertopal.com_Potential.latex
docs/NBodySimulation/Images/cone/: cone.dvi  cone.tex
docs/Project_Overview/: Aims.rst  MilkyWayClusters.rst  Tasks.rst
docs/_build/latex/: Deckblatt_Masterarbeit.tex  n_body.aux  n_body.out  n_body.tex  n_body.toc  n_body_clean.aux  n_body_clean.out  n_body_clean.tex  n_body_clean.toc  n_body_clean2.aux  n_body_clean2.out  n_body_clean2.tex  n_body_clean2.toc  private_beta.docx  private_beta_REV.docx
docs/_build/latex/pyplots/: initialConditionsMassDisk.py  initialConditionsMassSalpeter.py  potentialSurfaceDensity.py
docs/pyplots/: initialConditionsMassBulge.py  initialConditionsMassDisk.py  initialConditionsMassSalpeter.py  initialConditionsSurfaceDensityBulge.py  massDistribution.py  potentialCircularVelocity.py  potentialPositions.py  potentialSample.py  potentialSurfaceDensity.py  potentialVelocity.py
docs/source/: conf.py
enc_temp_folder/532966788481b77fceac1fe16bcb9e6/: Database.h
enc_temp_folder/8b7caad89c35c67185ff8f21d4acb459/: Database.h
enc_temp_folder/d12a597936724f3f3c13b9b4f71f3d4/: Analysis.cpp
enc_temp_folder/efa062a6eb3b4e44c0d6971dd9b161/: Analysis.cpp
include/: Analysis.h  ClosestPair.h  Configuration.h  Constants.h  Database.h  DwekPotential.h  Extinction.h  InOut.h  InitialConditions.h  Integrator.h  LookupTable.h  MWPotential.h  Matrix.h  Misc.h  Node.h  Parameters.h  Plot.h  Point.h  Potential.h  ProgressBar.h  Projection.h  Simulation.h  SimulationData.h  Star.h  Test.h  VDBSCAN.h  Vec2D.h  Vec3D.h  WangPotential.h  sqlite3.exp
include/Potential/: Hernquist.h  Potential.h
src/: Analysis.cpp  ClosestPair.cpp  Configuration.cpp  Constants.cpp  Database.cpp  DwekPotential.cpp  Extinction.cpp  InOut.cpp  InitialConditions.cpp  Integrator.cpp  LookupTable.cpp  MWPotential.cpp  Matrix.cpp  Misc.cpp  Node.cpp  Parameters.cpp  Plot.cpp  Point.cpp  Potential.cpp  ProgressBar.cpp  Projection.cpp  Simulation.cpp  SimulationData.cpp  Star.cpp  Test.cpp  VDBSCAN.cpp  Vec2D.cpp  Vec3D.cpp  WangPotential.cpp  main.cpp
src/Analysis/: fromDatabase.py
src/DBSCAN/: DBSCAN.cpp  RTree.h  point.cpp
src/Plots/: bulgeDispersion.py  bulgeMeanVelocity.py  clusteringVelocity.py  fromDatabase.py  initialConditionsBrokenPowerLaw.py  initialConditionsMassBulge.py  initialConditionsMassDisk.py  initialConditionsMassSalpeter.py  massDistribution.py  plotCentral.py  potentialCircularVelocity.py  potentialPositions.py  potentialSurfaceDensity.py
src/Potential/: Hernquist.cpp
src/Test/: bulgeDispersion.py  bulgeMeanVelocity.py  potentialVelocity.py
